// Vitest Snapshot v1

exports[`TableRow > should render with border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render with onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="group css-1src4hy"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without border 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-f3v5yv"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;

exports[`TableRow > should render without onClick callback 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class=" css-1li86da"
        data-testid="TableRow"
      />
    </tbody>
  </table>
</div>
`;
